Add description of pipeline transforms.

--- a/beam/Simple_Pipeline.ipynb
+++ b/beam/Simple_Pipeline.ipynb
@@ -246,6 +246,19 @@
     },
     {
       "metadata": {
+        "id": "XXVemi4mc70q",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "The function ```make_pipeline``` creates a Beam Pipeline that loads data from GCS, applies transforms to the data, and finally writes the output back to GCS.\n",
+        "1. [ReadFromText](https://beam.apache.org/releases/pydoc/2.11.0/apache_beam.io.textio.html?highlight=readfromtext#apache_beam.io.textio.ReadFromText): The result is a PCollection, that is, an object that references the data that will be processed by the pipeline.\n",
+        "2. [ParDo](https://beam.apache.org/releases/pydoc/2.11.0/apache_beam.transforms.core.html#apache_beam.transforms.core.ParDo): ParDo is a special kind of transform that accepts objects that extend DoFn such as ```SplitString```.\n",
+        "3. [WriteToText](https://beam.apache.org/releases/pydoc/2.11.0/apache_beam.io.textio.html?highlight=readfromtext#apache_beam.io.textio.WriteToText): As the pipeline finishes processing data the output is written to one or more files."
+      ]
+    },
+    {
+      "metadata": {
         "id": "MKEWGvkuaT5A",
         "colab_type": "code",
         "colab": {}
